syntax = "proto3";

package persistence_sdk.modules.metas.internal.genesis;

import "gogoproto/gogo.proto";
import "persistence_sdk/modules/metas/internal/parameters/dummy/parameter.proto";
import "persistence_sdk/modules/metas/internal/mappable/meta.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/modules/metas/internal/genesis";

message Genesis {
  option (gogoproto.goproto_getters) = false;
  repeated persistence_sdk.modules.metas.internal.mappable.Meta defaultMappableList = 1 [(gogoproto.nullable) = false];
  repeated persistence_sdk.modules.metas.internal.parameters.dummy.DummyParameter defaultParameterList = 2 [(gogoproto.nullable) = false];

  repeated persistence_sdk.modules.metas.internal.mappable.Meta MappableList = 3 [(gogoproto.nullable) = false];
  repeated persistence_sdk.modules.metas.internal.parameters.dummy.DummyParameter ParameterList = 4 [(gogoproto.nullable) = false];

}
